Bug 324280 - Details view doesn't show any of the IM details in kpeople mode
Summary: Details view doesn't show any of the IM details in kpeople mode
Status: RESOLVED FIXED
Alias: None
Product: telepathy
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: git-latest
Platform: unspecified Linux
: NOR normal
Target Milestone: Future
Assignee: Telepathy Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-30 15:49 UTC by David Edmundson
Modified: 2013-09-06 16:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description David Edmundson 2013-08-30 15:49:32 UTC
In the right click -> Show Info page in the contact list when in kpeople mode, it doesn't show any IM related information

(reason being, no UI plugin has been written yet)
Comment 1 David Edmundson 2013-09-06 16:49:13 UTC
Git commit 052659b1a14c3fb5faa945d0bf1cc0addc3ff85d by David Edmundson.
Committed on 06/09/2013 at 00:36.
Pushed by davidedmundson into branch 'master'.

Add kpeople plugin to show IM contacts in show details view

REVIEW: 112549

M  +1    -0    kpeople/CMakeLists.txt
A  +13   -0    kpeople/uiplugins/CMakeLists.txt
A  +89   -0    kpeople/uiplugins/imdetailswidget.cpp     [License: LGPL (v2.1+)]
A  +39   -0    kpeople/uiplugins/imdetailswidget.h     [License: LGPL (v2.1+)]
A  +11   -0    kpeople/uiplugins/imdetailswidgetplugin.desktop

http://commits.kde.org/telepathy-common-internals/052659b1a14c3fb5faa945d0bf1cc0addc3ff85d