Add kpeople plugin to show IM contacts in show details view

REVIEW: 112549
BUG: 324280